# Qt-QML-Solutions

./: README.md
CppQuiz/: CppQuiz.pro  logo.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  quizwindow.cpp  quizwindow.h  quizwindow.ui  result.h  resultwindow.cpp  resultwindow.h  resultwindow.ui
Image_viewer/: CMakeLists.txt  LeftBtn.qml  data.qrc  main.cpp
ProgressBar/: CMakeLists.txt  Main.qml  main.cpp
Qsharedmemory/: QSharedmemory.pro  QSharedmemory.pro.user.9b2b13a  SharedMemory.cpp  main.cpp  main.qml
Qt_Sql/: main.cpp
Sep_18_Number_Slide_Puzzle/: CMakeLists.txt  Main.qml  imgs.qrc  main.cpp
Sep_30_QObjectList/: CMakeLists.txt  Item.h  ItemList.h  Main.qml  data.qrc  main.cpp
Try_Upload_Avata/: Try_Upload_Avata.pro  main.ui
qt-qml-shared-memory/: SharedMemory.cpp  SharedMemory.h  main.qml
qt-share-memory-console/: CMakeLists.txt  SharedMemoryManager.cpp  SharedMemoryManager.h  main.cpp
